# net_alpha

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PRD.md  README.md  coverage.xml  etf_pairs.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml  version.yml
scripts/: release.sh
src/net_alpha/: config.py  etf_replacements.yaml  section_1256_underlyings.yaml
tests/: conftest.py  test_config.py
tests/agent/: test_prompt.py  test_react.py  test_tools.py
tests/audit/: conftest.py  test_badge_cache.py  test_brokers_base.py  test_brokers_registry.py  test_brokers_schwab.py  test_hygiene_basis_unknown.py  test_hygiene_dup_key.py  test_hygiene_orphan_sell.py  test_hygiene_skeleton.py  test_hygiene_tax_config.py  test_hygiene_unpriced.py  test_metric_ref_encoding.py  test_per_lot_diff.py  test_provenance_cash.py  test_provenance_net_contributed.py  test_provenance_realized.py  test_provenance_trace_shape.py  test_provenance_unrealized.py  test_provenance_wash_impact.py  test_public_api.py  test_reconciliation.py
tests/brokers/: test_registry.py  test_schwab.py  test_schwab_cash_events.py  test_schwab_gross_cash_impact.py  test_schwab_realized_gl.py
tests/cli/: test_agent.py  test_app_v2.py  test_check.py  test_cli_split_application.py  test_default_gl_hydration.py  test_migrate.py  test_output.py  test_rebuys.py  test_simulate.py  test_simulate_lots.py  test_status.py  test_tax_position.py  test_ui.py
tests/config/: test_tax_config.py
tests/db/: conftest.py  test_cash_events_repo.py  test_connection.py  test_migration_v11.py  test_migration_v12.py  test_migration_v13.py  test_migration_v14.py  test_migration_v15.py  test_migration_v16.py  test_migration_v17.py  test_migration_v17_to_v18.py  test_migration_v1_v2.py  test_migration_v2_v3.py  test_migration_v8_to_v9.py  test_migrations.py  test_repository.py  test_repository_accounts.py  test_repository_add_import.py  test_repository_carryforward.py  test_repository_gl.py  test_repository_manual_trades.py  test_repository_mutations.py  test_repository_preferences.py  test_repository_reads.py  test_repository_replace_lots.py  test_repository_section_1256.py  test_repository_splits.py  test_repository_target_tags.py  test_repository_targets.py  test_repository_ui_methods.py  test_repository_violation_roundtrip.py  test_tables.py  test_tables_carryforward.py  test_update_trade_basis_with_date.py  test_user_preferences_row.py  test_v2_tables.py  test_v3_to_v4_migration.py  test_v5_to_v6_migration.py  test_v6_to_v7_migration.py
tests/engine/: test_detect_in_window.py  test_detector.py  test_detector_section_1256.py  test_detector_v2_fields.py  test_etf_pairs.py  test_etf_pairs_loader.py  test_etf_replacements.py  test_lockout.py  test_lot_selector.py  test_matcher.py  test_merge.py  test_recompute_section_1256.py  test_simulate_buy.py  test_simulator.py  test_stitch.py  test_tax_position.py
tests/explain/: test_cli_renderer.py  test_exempt.py  test_templates.py  test_violation.py
tests/fixtures/: robinhood_sample.csv  schwab_long_term.csv  schwab_sample.csv  schwab_short_term.csv
tests/import_/: test_aggregations.py  test_anonymizer.py  test_backfill.py  test_csv_reader.py  test_dedup.py  test_importer_fallback.py  test_integration.py  test_option_parser.py  test_schema_detection.py
tests/inbox/: conftest.py  test_aggregator.py  test_config.py  test_dismissals.py  test_lt_eligibility.py  test_models.py  test_option_expiry.py  test_wash_rebuy.py
tests/ingest/: test_csv_loader.py  test_csv_loader_smart_headers.py  test_dedup.py  test_option_parser.py
tests/integration/: conftest.py  test_carryforward_e2e.py  test_import_cash_events.py  test_portfolio_e2e.py  test_reimport_preserves_edits.py  test_section_1256_e2e.py  test_section_1256_migration.py  test_section_1256_production_path.py  test_split_autosync_on_import.py  test_split_e2e.py  test_transfer_basis_split_flow.py
tests/models/: test_cash_event.py  test_domain.py  test_domain_section_1256.py  test_realized_gl.py  test_trade_v2.py  test_v2_domain.py
tests/output/: test_renderers.py
tests/portfolio/: conftest.py  test_account_value.py  test_after_tax.py  test_allocation.py  test_benchmark.py  test_calendar_pnl.py  test_carryforward.py  test_cash_flow.py  test_closed_lots.py  test_detail_aggregations.py  test_equity_curve.py  test_explain.py  test_kpiset_today_removed.py  test_lot_aging.py  test_pnl.py  test_positions.py  test_positions_density_extras.py  test_positions_premium.py  test_sim_suggestions.py  test_tax_brackets_niit.py  test_tax_planner_harvest.py  test_tax_planner_offset.py  test_tax_planner_plan.py  test_tax_planner_projection.py  test_tax_planner_traffic_light.py  test_tax_planner_wheel.py  test_today_change.py  test_top_movers.py  test_treemap.py  test_wash_watch.py
tests/prefs/: test_effective_profile.py  test_profile_columns.py  test_profile_kpi_order.py  test_profile_settings.py
tests/pricing/: conftest.py  test_cache.py  test_provider.py  test_quote_model.py  test_service.py  test_service_historical.py  test_split_sync.py  test_warm_historical_range.py  test_yahoo_historical.py  test_yahoo_provider.py  (+1 more)
(+412 files in other folders)
