# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wash-alpha"
version = "0.52.2"
description = "Cross-account wash sale detection for stocks, options, and ETFs — local-first, IRS Pub 550 rules, with a tax-harvest planner and pre-trade simulator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Chen" }]
keywords = [
    "wash-sale",
    "tax",
    "tax-loss-harvesting",
    "trading",
    "stocks",
    "options",
    "etf",
    "schwab",
    "irs",
    "section-1256",
    "finance",
    "investing",
    "broker-csv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pydantic>=2.0",
    "sqlmodel>=0.0.16",
    "typer[all]>=0.12",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/chen-star/net_alpha"
Repository = "https://github.com/chen-star/net_alpha"
Documentation = "https://github.com/chen-star/net_alpha#readme"
Issues = "https://github.com/chen-star/net_alpha/issues"
Changelog = "https://github.com/chen-star/net_alpha/blob/master/CHANGELOG.md"

[project.scripts]
net-alpha = "net_alpha.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "pytailwindcss>=0.1.4,<0.2",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
    "playwright>=1.47",
]
ui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.40",
]

[tool.hatch.build.targets.wheel]
packages = ["src/net_alpha"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/web/snapshots"
markers = [
    "network: tests that hit external services; run only with --run-network",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = ""
tag_format = "v{version}"
commit_message = "chore: release v{version}"
